fix text overflow

--- a/scss/style.css
+++ b/scss/style.css
@@ -666,6 +666,7 @@ table {
 }
 
 .squad .container {
+  max-width: 1260px;
   width: 100%;
   display: flex;
   position: relative;
@@ -710,8 +711,7 @@ table {
 }
 .squad__posters {
   margin-top: 85px;
-  display: flex;
-  justify-content: center;
+  padding-bottom: 71px;
 }
 .squad__image {
   max-width: 297px;
@@ -827,12 +827,6 @@ table {
   color: #ffffff;
   align-self: center;
 }
-.squad .quality__box {
-  width: 22px;
-  height: 22px;
-  border-radius: 50%;
-  border: solid;
-}
 .squad__delivery {
   display: flex;
   align-self: center;
@@ -841,12 +835,11 @@ table {
   margin-left: 29px;
   padding-top: 38px;
 }
-.squad__nav {
-  padding-left: 130px;
-  padding-top: 70px;
+.squad-row {
+  width: 100%;
+  max-height: 29px;
 }
 .squad__nav-story {
-  padding-left: 130px;
   padding-top: 100px;
 }
 .squad__nav-story__title {
@@ -867,7 +860,6 @@ table {
 .squad__nav-li {
   padding-right: 46px;
   position: relative;
-  display: inline-block;
 }
 .squad__nav-li:hover {
   cursor: pointer;
